--- a/src/app/platos/platos.component.html
+++ b/src/app/platos/platos.component.html
@@ -11,7 +11,7 @@
     <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
     data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
     
-    <div class="search-container">
+    <div class="search-container col-md-10">
       <label class="label" >Buscar el nombre del plato:</label>
       <div class="search-box">
         <input type="text" 
