--- a/src/app/alimentos/alimentos.component.html
+++ b/src/app/alimentos/alimentos.component.html
@@ -7,7 +7,7 @@
     <button mat-raised-button type="submit" class=" btn1 btn-danger pull-right card-title" data-toggle="modal"
     data-target="#ventanaForm" (click)="nuevoCurso()">AGREGAR +</button>
 
-    <div class="search-container">
+    <div class="search-container col-md-10">
       <label class="label"  for="nombreproductoFiltro">Buscar el nombre del producto:</label>
       <div class="search-box">
         <input type="text" 
