--- a/src/app/credito/credito.component.html
+++ b/src/app/credito/credito.component.html
@@ -1,91 +1,90 @@
 <link  href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet"
 />
+<img src="/path/to/icons/example-icon.svg" alt="An example icon" style="width:24px;height:24px" />
+
 
 
 <div class="main-content">
   <div class="container-fluid">
 
     <div class="form-row">
-      <div class="form-group  ">
-        <label for="filtroSelector">Filtrar por:</label>
-        <div class="d-flex align-items-center">
-          <div class="mr-4 text-center">
-            <div class="form-check">
-              <input
-                type="radio"
-                id="filtroNombre"
-                class="form-check-input"
-                name="filtro"
-                [(ngModel)]="filtroSeleccionado"
-                [value]="'nombre'"
-                (change)="aplicarFiltros()"
-              />
-              <label for="filtroNombre" class="form-check-label">Nombre</label>
-            </div>
-            <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'nombre'">{{ filtroSeleccionado === 'nombre' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
-
-<!--             <i  class="material-icons mt-2">{{ filtroSeleccionado === 'nombre' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
- -->          </div>
-
-
-          <div class="text-center">
-            <div class="form-check">
-              <input
-                type="radio"
-                id="filtroFecha"
-                class="form-check-input"
-                name="filtro"
-                [(ngModel)]="filtroSeleccionado"
-                [value]="'fecha'"
-                (change)="aplicarFiltros()"
-              />
-              <label for="filtroFecha" class="form-check-label">Fecha</label>
-            </div>
-<!--             <i class="material-icons mt-2">{{ filtroSeleccionado === 'fecha' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
- -->            <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'fecha'">{{ filtroSeleccionado === 'fecha' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
-
-          </div>
+      <div class="form-group containerversion2 col-md-12">
+        <div class="labelversion2">
+          <label for="filtroSelector">Filtrar por:</label>
         </div>
-      </div>
-
-
-        <!-- Campo de filtro de Nombre -->
-        <div class="form-row" *ngIf="filtroSeleccionado === 'nombre'">
-          <div class="form-group col-md-4">
-            <div class="formmm3">
-           
-           <div class="search-containerr"  *ngIf="filtroSeleccionado === 'nombre'">
-           <label class="label"  for="nombreFiltro">Buscar el nombre del plato:</label>
-            <div class="search-box">
-              <input type="text" class="form-control" [(ngModel)]="nombreFiltro" (input)="aplicarFiltros()" />
+    
+        <div class="mr-4 text-center">
+          <div class="form-check">
+            <input
+              type="radio"
+              id="filtroNombre"
+              class="form-check-input"
+              name="filtro"
+              [(ngModel)]="filtroSeleccionado"
+              [value]="'nombre'"
+              (change)="aplicarFiltros()"
+            />
+            <label for="filtroNombre" class="form-check-label">Nombre</label>
+          </div>
+          <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'nombre'">{{ filtroSeleccionado === 'nombre' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
+        </div>
+    
+        <div class="text-center">
+          <div class="form-check">
+            <input
+              type="radio"
+              id="filtroFecha"
+              class="form-check-input"
+              name="filtro"
+              [(ngModel)]="filtroSeleccionado"
+              [value]="'fecha'"
+              (change)="aplicarFiltros()"
+            />
+            <label for="filtroFecha" class="form-check-label">Fecha</label>
+          </div>
+          <i class="material-icons mt-2 cursor" (click)="filtroSeleccionado = 'fecha'">{{ filtroSeleccionado === 'fecha' ? 'radio_button_checked' : 'radio_button_unchecked' }}</i>
+        </div>
         
-            </div>
-           </div>
-            </div>
-          </div>
-        </div>
-
-
-
-         <!-- Campo de filtro de  Fecha -->
-         <div class="form-row" *ngIf="filtroSeleccionado === 'fecha'">
-          <div class="form-group col-md-4">
-            <div class="formmm3">
-           
-              <div class="search-containerr"  *ngIf="filtroSeleccionado === 'fecha'">
- 
-
-                <label class="label"  for="fechaFiltro">Buscar la fecha:</label>
-                <div class="search-box">
-                  <input type="date" class="form-control" [(ngModel)]="fechaFiltro" (input)="aplicarFiltrosfecha()" />
-              
+        <!-- Campo de filtro de Nombre -->
+        <div *ngIf="filtroSeleccionado === 'nombre'">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <div class="formmm3">
+                <div class="search-containerr">
+                  <label class="label" for="nombreFiltro">Buscar el nombre del plato:</label>
+                  <div class="search-box">
+                    <input type="text" class="form-control" [(ngModel)]="nombreFiltro" (input)="aplicarFiltros()" />
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
     
+        <!-- Campo de filtro de Fecha -->
+        <div *ngIf="filtroSeleccionado === 'fecha'">
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <div class="formmm3">
+                <div class="search-containerr">
+                  <label class="label" for="fechaFiltro">Buscar la fecha:</label>
+                  <div class="search-box">
+                    <input type="date" class="form-control" [(ngModel)]="fechaFiltro" (input)="aplicarFiltrosfecha()" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    
+
+    
+
+
+
+<br>
 
     
     <div class="row">
@@ -102,15 +101,35 @@
 
       <div class="col-md-12">
         <div class="card">
-          <div class="card-header card-header-danger">
+          <div class="card-header card-header-danger d-flex align-items-center justify-content-between">
             <h4 class="card-title disabled">
               <img
                 src="/assets/img/tarjeta-de-credito.png"
                 class="edit"
                 alt=""
               />
-              Créditos
+              Créditos 
             </h4>
+         
+          
+
+
+
+            <li class="nav-item dropdown">
+              <a class="nav-link  col" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  >
+                Descargar    <i class="material-icons">file_download</i> 
+                
+                  <p>
+                      <span class="d-lg-none d-md-block">Some Actions</span>
+                  </p>
+              </a>
+              <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" (click)="descargarDatos()" >Exportar a excel <img class="tamimg" src="/assets/img/microsoft-excel.svg" alt=""> </a>
+                  <a class="dropdown-item"(click)="descargarPDF()" > Exportar a pdf <i class="material-icons">picture_as_pdf</i></a>
+                
+                  
+              </div>
+          </li>
           </div>
           <div class="card-body">
             <div class="table-responsive">
