--- a/src/app/reporte-politecnico/reporte-politecnico.component.scss
+++ b/src/app/reporte-politecnico/reporte-politecnico.component.scss
@@ -1,13 +1,14 @@
-img {
-    height: 60px;
-    width: 60px;
-
+img{
+    height: 450px;
+    width: 800px;
+    
 }
-
-button1 {
-    color: blue;
+.tamaño{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-button2 {
-    color: red;
+h3{
+    font-weight: bold;
+    font-size: 20px;
 }
